force-app/main/default/objects/Contact/fields/V_Login__c.field-meta.xml
<CustomField>
    <fullName>V_Login__c</fullName>
    <formula>V_Member__r.V_RegistroParticipante__c</formula>
    <label>Login do Participante</label>
    <type>Text</type>
</CustomField>