force-app/main/default/objects/Contact/fields/V_Member__c.field-meta.xml
<CustomField>
    <fullName>V_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Contatos</relationshipLabel>
    <relationshipName>V_Members</relationshipName>
    <type>Lookup</type>
</CustomField>