force-app/main/default/objects/Contact/fields/V_NomeTratamento__c.field-meta.xml
<CustomField>
    <fullName>V_NomeTratamento__c</fullName>
    <formula>V_Member__r.V_NomeTratamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome de Tratamento (Participante)</label>
    <type>Text</type>
</CustomField>